# Learning-Zone

./: README.md
C++/Binary Trees and Search Functions/COS2611_02/Question 1/: COS2611_02_Q1.cpp
C++/Binary Trees and Search Functions/COS2611_02/Question 2/: COS2611_02_Q2.cpp
C++/GUI Robot/build-untitled2-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
C++/GUI Robot/build-untitled2-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/debug/: main.moc  (+1 more)
C++/GUI Robot/untitled2/: main.cpp
C++/GUI and UML Testing/Question1/: main.cpp
C++/GUI and UML Testing/Question2/: Product.cpp  Product.h  Question2.pro  Vendor.cpp  Vendor.h  main.cpp
C++/QT Designer Book Information Capturer/: CMakeLists.txt  book.cpp  book.h  bookinput.cpp  bookinput.h  bookwriter.cpp  bookwriter.h  main.cpp
C++/QT Designer GUI Data Capturer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  reviewwindow.cpp  reviewwindow.h  softwarereview.cpp  softwarereview.h
C++/QT Designer Password Validation Program/Question_3/: CMakeLists.txt  main.cpp  passwordvalidator.cpp  passwordvalidator.h
C++/QT Designer Rgular Expression Cell and EMail Checker/: CMakeLists.txt  Q4 data.txt  mainwindow.cpp  mainwindow.h
C++/UML Classes with Transactions/build-untitled1-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
C++/UML Classes with Transactions/trainingMaterial/: main.cpp  trainingMaterial.cbp
C++/UML Classes with Transactions/untitled/: main.cpp  untitled.cbp
C++/UML Classes with Transactions/untitled1/: main_copy.cpp  untitled1.pro
(+35 files in other folders)
